spacing issue fix

--- a/wp-content/themes/healthkart/assets/scss/_home.scss
+++ b/wp-content/themes/healthkart/assets/scss/_home.scss
@@ -456,6 +456,7 @@
 	}
 	&-section{
 		.action-btn{
+		    margin-bottom: 40px;
 			@media (max-width: 767px){
 				text-align: center;
 			}
